@startuml

skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

class ListExamGradesUI <<presentation>> {
    doShow()
}

class ListExamGradesController <<controller>> {
    listExamGrades()
}

class AuthorizationService <<service>> {
    ensureAuthenticatedUserHasAnyOf(Role...)
    session()
}

class UserSession {
    authenticatedUser()
}

class ExamManagementService <<service>> {
    listExamGrades()
}

class PersistenceContext <<persistence>> {
    repositories()
}

class RepositoryFactory <<factory>> {
    exams()
}

class ExamRepository <<repository>> {
    findGradesByStudent()
}

ListExamGradesUI --> ListExamGradesController : the controller
ListExamGradesController --> AuthorizationService : autzh
ListExamGradesController --> ExamManagementService : service
ListExamGradesController --> PersistenceContext : persistence
AuthorizationService --> UserSession : session
ExamManagementService --> PersistenceContext : persistence
ExamManagementService --> ExamRepository : repo
PersistenceContext --> RepositoryFactory : factory
RepositoryFactory --> ExamRepository : repo

@enduml